--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.56.0",
     "@tailwindcss/postcss": "^4.1.17",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
