--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.56.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "axios": "^1.13.2",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
